# protoc_c

./: CMakeLists.txt  main.c  test.pb-c.c  test.pb-c.h  test.proto
